[project]
name = "transaction-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Aaron Joy",email = "aaronjoy382@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.139.2,<0.140.0)",
    "uvicorn[standard] (>=0.51.0,<0.52.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "ruff (>=0.15.22,<0.16.0)"
]
